# src/handler/auth.go
@@ -11,12 +11,13 @@ import (
 
 type AuthInterface interface {
 	Register(c *gin.Context)
+	Login(c *gin.Context)
 }
 
-type AuthImpl struct{}
+type authImpl struct{}
 
 func Auth() AuthInterface {
-	return AuthImpl{}
+	return &authImpl{}
 }
 
 // Register godoc
@@ -25,10 +26,10 @@ func Auth() AuthInterface {
 //	@Tags			auth
 //	@Accept			json
 //	@Produce		json
-//	@Param			payload	body		requestmodel.Register	true	"userPayload"
-//	@Success		200		{object}	 responsemodel.Auth
+//	@Param			payload	body		requestmodel.Register	true	"registerPayload"
+//	@Success		200		{object}	responsemodel.Auth
 //	@Router			/auth/register [post]
-func (a AuthImpl) Register(c *gin.Context) {
+func (a authImpl) Register(c *gin.Context) {
 	var (
 		ctx     = gincontext.GetContext(c)
 		s       = service.Auth()
@@ -36,6 +37,31 @@ func (a AuthImpl) Register(c *gin.Context) {
 	)
 
 	res, err := s.Register(ctx, payload)
+	if err != nil {
+		response.R400(c, nil, err)
+		return
+	}
+
+	response.R200(c, gin.H{"token": res.Token}, "")
+}
+
+// Register godoc
+//
+//	@Summary		Register user
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		requestmodel.Login	true	"loginPayload"
+//	@Success		200		{object}	 responsemodel.Auth
+//	@Router			/auth/login [post]
+func (a authImpl) Login(c *gin.Context) {
+	var (
+		ctx     = gincontext.GetContext(c)
+		s       = service.Auth()
+		payload = gincontext.GetPayload(c).(requestmodel.Login)
+	)
+
+	res, err := s.Login(ctx, payload)
 	if err != nil {
 		response.R400(c, nil, err)
 		return
