# src/route/validation/Auth.go
@@ -4,11 +4,13 @@ import (
 	"gin-base/internal/response"
 	gincontext "gin-base/internal/util/context"
 	requestmodel "gin-base/src/model/request"
+
 	"github.com/gin-gonic/gin"
 )
 
 type AuthInterface interface {
 	Register() gin.HandlerFunc
+	Login() gin.HandlerFunc
 }
 type authImpl struct{}
 
@@ -19,6 +21,24 @@ func Auth() AuthInterface {
 func (a authImpl) Register() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var payload requestmodel.Register
+		if err := c.ShouldBindJSON(&payload); err != nil {
+			response.R400(c, nil, err)
+			return
+		}
+
+		if err := payload.Validate(); err != nil {
+			response.R400(c, nil, err)
+			return
+		}
+
+		gincontext.SetPayload(c, payload)
+		c.Next()
+	}
+}
+
+func (a authImpl) Login() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var payload requestmodel.Login
 		if err := c.ShouldBindJSON(&payload); err != nil {
 			response.R400(c, nil, err)
 			return
